--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,18 @@
-name: simple-workflow.yml
+ #name: simple-workflow
 
-on: 
-  schedule: 
-      -cron: "0 * * * *"
-  push:
-    branches:
-      - main
+#on: 
+ # schedule: 
+  #  - cron: "0 * * * *" # Planifie le workflow pour s'exécuter à chaque début d'heure
+  #push:
+   # branches:
+      - main # Exécute également le workflow lorsqu'il y a un push sur la branche main
 
-jobs:
+#jobs:
+#  simple-job:
+#    runs-on: ubuntu-latest # Définit l'environnement d'exécution
+ #   steps:
+  #    - name: Récupération du code source
+   #     run: echo "Récupération du code source"
 
-  run : |
-    echo ": « Récupération du code source »"
-    echo ": « Vérification terminée »"
-    
+    #  - name: Vérification terminée
+     #   run: echo "Vérification terminée"
